# PhyEG

./: CMakeLists.txt  README.md
examples/: materials.cpp  offscreen.cpp  shadow.cpp  skybox.cpp  triangle.cpp
src/: CMakeLists.txt
src/Core/: COREOBJECT
src/Dynamic/: DYNAMICOBJECT
src/Framework/: object.h
src/Render/basic/: common.h  config.h  constants.h  eventDispatch.cpp  eventDispatcher.cpp  eventDispatcher.h
src/Render/camera/: camera.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h
src/Render/cameraControl/: cameraControl.h  gameCameraControl.cpp  gameCameraControl.h
src/Render/core/: attribute.h  geometry.cpp  geometry.h  object3D.cpp  object3D.h
src/Render/geometry/: boxGeometry.cpp  boxGeometry.h  planeGeometry.cpp  planeGeometry.h
src/Render/light/: ambientLight.cpp  ambientLight.h  directionalLight.cpp  directionalLight.h  directionalLightShadow.cpp  directionalLightShadow.h  light.cpp  light.h  lightShadow.cpp  lightShadow.h
src/Render/loader/: cache.cpp  cache.h  cubeTextureLoader.cpp  cubeTextureLoader.h  loader.cpp  loader.h  textureLoader.cpp  textureLoader.h
src/Render/logger/: debugLog.cpp  debugLog.h
src/Render/material/: cubeMaterial.cpp  cubeMaterial.h  depthMaterial.cpp  depthMaterial.h  material.cpp  material.h  (+4 more)
src/basic/: common.h  constant.h  constants.h  eventDispatch.cpp  eventDispatch.h
src/camera/: camera.cpp  orthographicCamera.cpp  perspectiveCamera.cpp
src/cameraControl/: cameraControl.cpp  cameraControl.h
src/core/: attribute.h  geometry.cpp  geometry.h  object3D.cpp  object3D.h
src/math/: box3.h  sphere.h
src/tools/: identity.h
(+113 files in other folders)
